--- a/navigation/css/component.css
+++ b/navigation/css/component.css
@@ -14,6 +14,17 @@ html, body, .perspective1 {
 	height: 100%;
 }
 
+input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: black;
+}
+
 .perspective1 {
 	background: #aaa;
 	position: relative;
