--- a/navigation/css/component.css
+++ b/navigation/css/component.css
@@ -14,7 +14,7 @@ html, body, .perspective1 {
 	height: 100%;
 }
 
-input[type=text], select {
+#isbn,select {
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
